fix margins, padding alignment

--- a/scss/_bg.scss
+++ b/scss/_bg.scss
@@ -1,34 +1,20 @@
-// variables
-$horizon-y: 80vh;
-$boat-x: 10vw;
-$page-y-drop: 85vh;
 
-// .page-wrapper {
+
 body {
+   position: relative;
+   
    background: linear-gradient($sky-1 30%, $sky-2), linear-gradient($water-1, $water-2);
    background-size: 100% $horizon-y,
                      auto calc(100% - #{$horizon-y} + #{$page-y-drop});
    background-position-y: top, $horizon-y;
    background-repeat: no-repeat, no-repeat;
-
-   &::after {
-      content: "";
-      display: block;
-      position: relative;
-      background-image: url("./images/vertical-whale.svg");
-      background-repeat: no-repeat;
-      background-size: contain;
-      width: 100%;
-      height: 97vw;
-      left: 5%;
-      top: $page-y-drop;
-      transform: scaleX(-1);
-   }
    
 }
 
-body {
+.page-wrapper  {
+   display: block;
    position: relative;
+   top: 85vh;
 
    &::before {
       content: "";
@@ -40,28 +26,51 @@ body {
       width: 150px;
       height: 150px;
       right: 17vw;
-      top: calc(#{$horizon-y} - 85px);
+      top: calc(-5vh - 85px);
+      // top: calc(#{$horizon-y} - 85px);
       transform: scaleX(-1);
       filter: FlipH;
    }
+
+   &::after {
+      content: "";
+      display: block;
+      position: relative;
+      background-image: url("./images/vertical-whale.svg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      width: 100%;
+      height: 97vw;
+      left: 5%;
+      // top: $page-y-drop;
+      transform: scaleX(-1);
+   }
 }
 
-
-@media (min-width: 30em) {
-   body::after {
+@media (min-width: 40em) {
+   .page-wrapper::after {
       content: "";
       display: block;
       position: relative;
       background-image: url("./images/wide-whale.svg");
       background-repeat: no-repeat;
       background-size: contain;
-      width: 80%;
+      width: 100%;
       height: 50vw;
-      left: 5%;
+      left: 2%;
       transform: scaleX(1);
    }
 
    .intro {
-      margin: 1vw;
+      // margin: 1vw;
    }
+}
+
+header {
+   position : absolute;
+   top: -70
+   vh;
+   right: 17vw;
+   text-align: right;
+   padding-left: .5em;
 }
